--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "dry": {
-    "extends": "@io.jesi/parent/package-dry.json",
-    "dependencies": {
-      "@io.jesi/parent": "0.0.7"
-    }
-  },
   "name": "customs",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Clojure(Script) cross-project testing utilities",
   "homepage": "https://github.com/jesims/customs#readme",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jesims/customs.git"
@@ -19,6 +14,6 @@
     "url": "https://github.com/jesims/customs/issues"
   },
   "devDependencies": {
-    "remark-cli": "^7.0.0"
+    "ws": "^7.2.1"
   }
 }
