--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ aliases:
   containers:
     docker: &DEFAULT
       - image: jesiio/build-bus:latest
+        user: node
         environment:
           JVM_OPTS: -Xmx3200m
           DEBUG: 1
