--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.clj-kondo/
 .cljs_node_repl/
 .lein-failures
 .nrepl-port
@@ -9,6 +10,7 @@
 /out/
 node_modules/
 pom.xml
+project.edn
 target/
 tests.edn
 trace.edn
